--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+/* The Fam  https://fonts.google.com/specimen/Monofett  <--This one
+https://fonts.google.com/specimen/Ranchers */
+
 h1 {
   text-align: center;
 }
