--- a/css/app.css
+++ b/css/app.css
@@ -116,6 +116,10 @@ body {
         background: #ff7bac;
     }*/
 
+    /* START EXPANDER */
+    
+    /* END EXPANDER */
+
 #talkInvite {
     font-size: 40px;
     font-family: 'Comfortaa', cursive;
@@ -261,7 +265,7 @@ body {
     padding: 0px;
     border-style: none;
     color: white;
-    font-size: 150px;
+    font-size: 110px;
     /*     max-width: 400px;
 min-width: 100px;
 height: 400px;
@@ -297,11 +301,11 @@ min-height: 100px; */
 #pencilFeel {
     float: right;
     width: 40%;
-    height: 40%;
+    /* height: 40%; */
     margin-right: 50px;
     padding: 0px;
     color: white;
-    font-size: 150px;
+    font-size: 110px;
 
 }
 #pencilFeel:hover {
@@ -312,20 +316,22 @@ height: 400px;
 min-height: 100px; */
 }
 #textCamera {
-    font-size: 45px;
+    font-size: 55px;
     color: white;
+    font-weight: bolder;
     padding-left: none;
-    text-align: left;
+    text-align: center;
     font-family: 'Open Sans Condensed', sans-serif;
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 #textPencil {
-    font-size: 45px;
+    font-size: 55px;
     color: white;
+    font-weight: bolder;
     padding-left: none;
-    text-align: left;
+    text-align: center;
     font-family: 'Open Sans Condensed', sans-serif;
-    margin-top: 20px;
+    /* margin-top: 20px; */
 }
 #selfieCapture {
     clear: both;
@@ -357,117 +363,93 @@ min-height: 300px;
     color: white;
     font-size: 18px;
 }
-.blue {
-    background: #13b4ff;
-}
-.blue #blueFeel {
-    visibility: hidden;
-}
-.blue:hover #blueFeel {
-    visibility: visible;
+/* START CARO Pics */
+
+.image-hover-wrapper {
     position: relative;
-    bottom: -40px;
-    right: -20px;
+    background: white;
+    /* padding: 10%; */
+    margin-bottom: 2%;
+    border-radius: 1%;
+    padding: 20px;
 }
-.purple {
-    background: #ab3fdd;
+
+.image-hover-wrapper a {
+  display: inline-block;
+  letter-spacing: normal;
+  line-height: initial;
+  margin: 0;
+  padding: 0;
+  position: relative;
 }
-.purple #purpleFeel {
-    visibility: hidden;
+
+.image-hover-wrapper a img {
+  float: left;
+  overflow: hidden;
+  width: 100%;
 }
-.purple:hover #purpleFeel {
-    visibility: visible;
-    position: relative;
-    bottom: -40px;
+
+.image-hover-wrapper a .image-hover-wrapper-reveal {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fefefe;
+  display: inline;
+  height: 100%;
+  margin-left: -100%;
+  opacity: 0;
+  position: absolute;
+  width: 100%;
+  z-index: 80;
+  transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition-delay: 0.25s;
 }
-.pink {
-    background: #FA40BC;
+
+.image-hover-wrapper a .image-hover-wrapper-reveal:hover {
+  opacity: 1;
+  transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-.pink #pinkFeel {
-    visibility: hidden;
+
+.image-hover-wrapper a .image-hover-wrapper-reveal:hover p {
+  opacity: 1;
+  -webkit-transform: translateY(-100%);
+      -ms-transform: translateY(-100%);
+          transform: translateY(-100%);
+  transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition-delay: 0.25s;
 }
-.pink:hover #pinkFeel {
-    visibility: visible;
-    position: relative;
-    bottom: -40px;
+
+.image-hover-wrapper a .image-hover-wrapper-reveal p {
+  bottom: 0;
+  display: block;
+  opacity: 0;
+  position: absolute;
+  text-align: center;
+  width: 100%;
+  transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
-.salmon {
-    background: salmon;
+
+.image-hover-wrapper a .fa {
+  font-size: 24px;
 }
-.salmon #salmonFeel {
-    visibility: hidden;
+
+
+.image-hover-wrapper .image-hover-wrapper-banner {
+background-color: white;
+    color: dimgrey;
+    font-weight: 600;
+    left: 0;
+    padding: 0.5rem;
+    position: absolute;
+    top: 35%;
+    left: 95%;
+    width: 19%;
+    z-index: 10;
+    border-radius: 8px;
+    border: solid grey 3px;
 }
-.salmon:hover #salmonFeel {
-    visibility: visible;
-    position: relative;
-    bottom: -40px;
-}
-.yellow {
-    background: yellow;
-}
-.yellow #yellowFeel {
-    visibility: hidden;
-}
-.yellow:hover #yellowFeel {
-    visibility: visible;
-    position: relative;
-    bottom: -40px;
-}
-.lightgreen {
-    background: lightgreen;
-}
-.lightgreen #lightgreenFeel {
-    visibility: hidden;
-}
-.lightgreen:hover #lightgreenFeel {
-    visibility: visible;
-    position: relative;
-    bottom: -40px;
-}
-.lightblue {
-    background: lightblue;
-}
-.lightblue #lightblueFeel {
-    visibility: hidden;
-}
-.lightblue:hover #lightblueFeel {
-    visibility: visible;
-    position: relative;
-    bottom: -40px;
-}
-.orange {
-    background: orange;
-}
-.orange #orangeFeel {
-    visibility: hidden;
-}
-.orange:hover #orangeFeel {
-    visibility: visible;
-    position: relative;
-    bottom: -40px;
-}
-.lime {
-    background: #62FA44;
-}
-.lime #limeFeel {
-    visibility: hidden;
-}
-.lime:hover #limeFeel {
-    visibility: visible;
-    position: relative;
-    bottom: -40px;
-}
-.candycane {
-    background: #E5071F;
-}
-.candycane #candycaneFeel {
-    visibility: hidden;
-}
-.candycane:hover #candycaneFeel {
-    visibility: visible;
-    position: relative;
-    bottom: -40px;
-}
+
+
+/* END CARO Pics  */
+
 #offCanvasBottom1 {
     background: white;
 }
@@ -567,6 +549,13 @@ margin: 40px 20px; */
 label:focus {
     z-index: -1;
 } */
+
+.bgimg {
+    background-image: url('images/bgColorFire.jpg');
+    border-radius: 3px;
+    padding: 2%;
+    background-repeat: no-repeat;
+}
 
 button {
     /* @extend .transition*/
@@ -771,7 +760,7 @@ li #jan1 {} li #jan1:hover {
         /* margin-right: 50px; */
         padding: 0px;
         color: white;
-        font-size: 220px;
+        font-size: 200px;
     }
     #textPencil {
         font-size: 18px;
@@ -784,11 +773,11 @@ li #jan1 {} li #jan1:hover {
     #cameraFeel {
         float: right;
         width: 40%;
-        height: 40%;
+        /* height: 40%; */
          margin-right: 150px; 
         padding: 0px;
         color: white;
-        font-size: 220px;
+        font-size: 200px;
     }
     #textCamera {
         font-size: 18px;
