--- a/css/app.css
+++ b/css/app.css
@@ -365,6 +365,8 @@ min-height: 300px;
 }
 /* START CARO Pics */
 
+
+
 .image-hover-wrapper {
     position: relative;
     background: white;
@@ -390,7 +392,7 @@ min-height: 300px;
 }
 
 .image-hover-wrapper a .image-hover-wrapper-reveal {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(1, 2, 3, .7);
   color: #fefefe;
   display: inline;
   height: 100%;
@@ -418,13 +420,20 @@ min-height: 300px;
 }
 
 .image-hover-wrapper a .image-hover-wrapper-reveal p {
-  bottom: 0;
-  display: block;
-  opacity: 0;
-  position: absolute;
-  text-align: center;
-  width: 100%;
-  transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    /* bottom: 20px; */
+    display: block;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    color: black;
+    background: white;
+    border: #FF4136 5px solid;
+    border-radius: 14px;
+    padding: 2%;
+    text-align: center;
+    width: 25%;
+    transition: all 500ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
 .image-hover-wrapper a .fa {
@@ -447,7 +456,11 @@ background-color: white;
     border: solid grey 3px;
 }
 
+/* .visitLink {
+    color:black;
+    font-family: 'Open Sans Condensed', sans-serif;
 
+} */
 /* END CARO Pics  */
 
 #offCanvasBottom1 {
@@ -529,26 +542,7 @@ margin: 40px 20px; */
     position: relative;
     padding: 10px 0;
 }
-/* label {
-    @extend .transition
-    transform-origin: left center;
-    
-    color: #FF4136;
-    font-weight: 100;
-    letter-spacing: 0.01em;
-    font-size: 15px;
-    box-sizing: border-box;
-    padding: 10px 15px;
-    display: block;
-    position: absolute;
-    top: 190px;
-    margin-top: -80px;
-    z-index: 1;
-    pointer-events: none;
-}
-label:focus {
-    z-index: -1;
-} */
+
 
 .bgimg {
     background-image: url('images/bgColorFire.jpg');
@@ -656,16 +650,6 @@ ul {
     padding-top: 10px;
     color: #FF4136;
 }
-/*  .dekCalendar {
-        margin: 0;
-        padding: 10px 0;
-        background-color: black;
-        background-color: navajowhite;
-        box-sizing:border-box;
-        color: white;
-        font-family: sans-serif;
-       
-    }*/
 
 .dekCalendar li {
     display: inline-block;
